jdk 8 code corrections